WIP preparing mysql db instead of text balance store